Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137927

Combining Qt::ExpandedClientAreaHint with Qt::CustomizeWindowHint breaks mouse event handling

XMLWordPrintable

    • Windows
    • ee2450ccd (dev), 305200b80 (6.10), e38b9e45b (6.9)

      When I set the Qt::ExpandedClientAreaHint and Qt::CustomizeWindowHint to create a custom header for the window, it no longer handles mouse events. Keyboard input works fine, I can navigate through the input widgets and type into line edits etc. But I can't hover or click on anything.

      Removing either Qt::ExpandedClientAreaHint or Qt::CustomizeWindowHint brings back mouse events.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            wladimir.leuschner Wladimir Leuschner
            tomikaa87 Tamas Karpati
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: